Initial version for documentation. (QSG and SysEplorer Help)

--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -20,14 +20,32 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 			<p class="Body">JavaScript is disabled. <a href="veristandmerge.chm::/JavaScript_Disabled.html">Details</a></p>
 			<hr width="100%" noshade>
 		</noscript>
-		<h1>Main</h1>
-		<h2>Subsection 1</h2>
-		Subsection 1 information</br>
-		
-		<h2>Subsection 2</h2>
-		Subsection 2 information</br>
-		<p>
-			<strong>Control:</strong> Description 
-		</p>
+		<h1>Telemetry Custom Device</h1>
+      <p>
+         This Custom Device provide support for benchmarking a VeriStand System by logging System Channels data for each PCL iteration.
+      </p>
+      <p>
+         A Quick Start Guide describing how to use the custom device can be found at the following location:
+      </p>
+      <p>
+         "C:\Users\Public\Documents\National Instruments\NI VeriStand (Year)\Custom Devices\National Instruments\Telemetry\Windows\Quick Start Documentation\Telemetry Quick Start.md"
+      </p>
+		<h2>Logged System Channels</h2>
+		- Absolute Time </br>
+      - Actual Loop Rate </br>
+      - HP Loop Duration </br>
+      - HP Count </br>
+      - LP Count </br>
+      - LP Data Count </br>
+      - Failure Count </br>
+      - HS TCP Overflow Count </br>
+      - Model Count </br>
+      - WPL Error Count </br>
+      - WPL Overflow Count </br>
+      - WPL TCP Overflow Count </br>
+      </br>
+      <p>
+         The data will be logged in the form of a TDMS file at the path described in the <strong>Log File</strong> page.
+      </p>         
 	</body>
 </html> 
