--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -28,7 +28,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
          <strong>Log File Path for Windows Targets:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
          <strong>Log File Path for RT Targets:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
       <p>
-         Overwriting the log file if it already exists can be done by having checked the checkbox in the Boolean Control:</br>
+         Overwriting the log file if it already exists can be done by having checked the Boolean Control checkbox:</br>
 			<strong>Overwrite File If Exists?:</strong> If the checkbox is <strong>checked</strong>, the Telemetry Custom Device will overwrite the log file during each deployment of the VeriStand system. If the checkbox is <strong>unchecked</strong> the Telemetry Custom Device will create a new log file only if no log file exists at the specific location on the target. If the log file already exists, and the checkbox is unchecked, no new file will be created.</p>
 	</body>
 </html> 
