--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -22,16 +22,19 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		</noscript>
 		<h1>Telemetry Custom Device</h1>
       <p>
-         This Custom Device provide support for benchmarking a VeriStand System by logging System Channels data for each PCL iteration.
+         The Telemetry Custom Device provides support for benchmarking a VeriStand System by logging System Channels data for each PCL iteration.
       </p>
       <p>
-         A Quick Start Guide describing how to use the custom device can be found at the following location:
+         A Quick Start Guide can be found at the following location:
       </p>
       <p>
          "C:\Users\Public\Documents\National Instruments\NI VeriStand (Year)\Custom Devices\National Instruments\Telemetry\Windows\Quick Start Documentation\Telemetry Quick Start.md"
       </p>
 		<h2>Logged System Channels</h2>
+      The Custom Device will create a log file containing the following system channels:</br>
+      </br>
 		- Absolute Time </br>
+      - Iteration </br>
       - Actual Loop Rate </br>
       - HP Loop Duration </br>
       - HP Count </br>
