Include the generation of Help file also for the "configuration debug"

--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -48,7 +48,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
       - WPL TCP Overflow Count </br>
       </br>
       <p>
-         The data will be logged in the form of a TDMS file at the path described in the <strong>Log File</strong> page.
+         The data will be logged in the form of a TDMS file found at the path described in the <strong>Log File</strong> page.
       </p>         
 	</body>
 </html> 
