Tech Writer Review
Contains edits for custom device documentation.

--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -22,16 +22,16 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		</noscript>
 		<h1>Telemetry Custom Device</h1>
       <p>
-         The Telemetry Custom Device provides support for benchmarking a VeriStand System by logging System Channels data for each PCL iteration.
+         The Telemetry Custom Device supports VeriStand benchmarking by logging system channel data for each PCL iteration.
       </p>
       <p>
-         A Quick Start Guide can be found at the following location:
+         You can find a Quick Start Guide for this custom device at the following location:
       </p>
       <p>
          "C:\Users\Public\Documents\National Instruments\NI VeriStand (Year)\Custom Devices\National Instruments\Telemetry\Windows\Quick Start Documentation\Telemetry Quick Start.md"
       </p>
 		<h2>Logged System Channels</h2>
-      The Custom Device will create a log file containing the following system channels:</br>
+      The custom device will create a log file containing the following system channels:</br>
 		- Absolute Time </br>
       - Iteration </br>
       - Actual Loop Rate </br>
@@ -47,7 +47,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
       - WPL TCP Overflow Count </br>
       </br>
       <p>
-         The data will be logged in the form of a TDMS file found at the path described in the <strong>Log File</strong> page.
-      </p>         
+         The data will be logged as a TDMS file at the location described in the <strong>Log File</strong> page.
+      </p>
 	</body>
-</html> 
+</html>
