--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -22,15 +22,12 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		</noscript>
 		<h1>Log File</h1>
       <p>
-         This section contains details regarding the location of the log file and lets the user choose to overwrite the log file if it already exists on the target. </p>
+         Depending on the target type, the log file can be found in the following locations:</br>
+         <strong>-Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
+         <strong>-RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
       <p>
-         The log file will be located at one of the following paths depending on the target type:</br>
-         <strong>- Log File Path for Windows Targets:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
-         <strong>- Log File Path for RT Targets:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
-      <p>
-         Overwriting the log file if it already exists can be done by having checked the:</br>
-			<strong>Overwrite File If Exists?:</strong> If the checkbox is <strong>checked</strong>, the Telemetry Custom Device will overwrite the log file during each deployment of the VeriStand system. If the checkbox is <strong>unchecked</strong> the Telemetry Custom Device will create a new log file only if no log file exists at the specific location on the target. </br>
+         You can overwrite an existing log file by enabling <strong>Overwrite File If Exists?</strong> When enabled, the custom device will overwrite the log file during each deployment of the system definition. </br>
          </br>
-         <strong>Note: </strong>If a log file already exists at the specified path, and the checkbox for <strong>Overwrite File If Exists? </strong>is unchecked, no new file will be created, and no logging will be done during deployment.</p>
+         <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if no log file exists at the specific location on the target.</p>
 	</body>
-</html> 
+</html>
