Update Help and Quick Start regarding "Overwrite File If Exists" info.

--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -23,10 +23,10 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		<h1>Log File</h1>
       <p>
          Depending on the target type, the log file can be found in the following locations:</br>
-         <strong>-Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
-         <strong>-RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
+         <strong>- Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
+         <strong>- RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
       <p>
-         You can overwrite an existing log file by enabling <strong>Overwrite File If Exists?</strong> When enabled, the custom device will overwrite the log file during each deployment of the system definition. </br>
+         By default, <strong>Overwrite File If Exists?</strong> is enabled. This will overwrite the log file during each deployment of the system definition. </br>
          </br>
          <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if no log file exists at the specific location on the target.</p>
 	</body>
