--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -28,6 +28,6 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
       <p>
          By default, <strong>Overwrite File If Exists?</strong> is enabled. This will overwrite the log file during each deployment of the system definition. </br>
          </br>
-         <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if no log file exists at the specific location on the target.</p>
+         <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if no log file exists at the specific location on the target. If a log file already exists the <strong>Error Code</strong> Channel will report <i>Error 6: Generic File I/O Error</i>.</p>
 	</body>
 </html>
