Added more specific details reagarding CPU Usage Channels.

--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -22,7 +22,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		</noscript>
 		<h1>Telemetry Custom Device</h1>
       <p>
-         The Telemetry Custom Device supports VeriStand benchmarking by logging System Channels, and by monitoring target resources.
+         The Telemetry Custom Device supports VeriStand benchmarking by logging system channels, and by monitoring target resources.
       </p>
       <p>
          You can find a Quick Start Guide for this custom device at the following location:
@@ -48,8 +48,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
       </br>
       The custom device also logs data representing the <strong>Target Resources</strong> for the target that is running the VeriStand Engine. The log file will contain the following metrics: </br>
       - Physical Memory Usage (%) </br>
-      - CPU x Usage (%) </br>
-      where x represents each CPU present on the target.</br>
+      - CPU x Usage (%) - <i>where x represents the number of each CPU present on the target system.</i></br>
       </br>
       <p>
          The data will be logged into a single TDMS file created at the location described in the <strong>Log File</strong> page.
