--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -22,12 +22,12 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		</noscript>
 		<h1>Log File</h1>
       <p>
-         Depending on the target type, the log file can be found in the following locations:</br>
+         Depending on the target type, the TDMS log file can be found in the following locations:</br>
          <strong>- Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
          <strong>- RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
       <p>
-         By default, <strong>Overwrite File If Exists?</strong> is enabled. This will overwrite the log file during each deployment of the system definition. </br>
+         By default, <strong>Overwrite File If Exists?</strong> is enabled. This option will overwrite the log file during each deployment of the system definition. </br>
          </br>
-         <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if no log file exists at the specific location on the target. If a log file already exists the <strong>Error Code</strong> Channel will report <i>Error 6: Generic File I/O Error</i>.</p>
+         <strong>Note: </strong>If <strong>Overwrite File If Exists?</strong> is not enabled, the custom device will only create a new log file if one does not already exist on the target. If a log file does exist, the <strong>Error Code</strong> channel will report <i>Error 6: Generic File I/O Error</i>.</p>
 	</body>
 </html>
