Update File Page.htm to be consistent with Main.htm Compile CHM file.

--- a/Source/Help/HTML Help Source/File Page.htm
+++ b/Source/Help/HTML Help Source/File Page.htm
@@ -23,8 +23,11 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
 		<h1>Log File</h1>
       <p>
          Depending on the target type, the TDMS log file can be found in the following locations:</br>
-         <strong>- Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</br>
-         <strong>- RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </p>
+         <ul>
+         <li><strong>Windows:</strong> "&ltSystem Definition Folder Path&gt\Logs\telemetry.tdms"</li></br>
+         <li><strong>RT:</strong> "c:\ni-rt\NIVeriStand\Logs\telemetry.tdms" </li>
+         </ul>
+      </p>
       <p>
          By default, <strong>Overwrite File If Exists?</strong> is enabled. This option will overwrite the log file during each deployment of the system definition. </br>
          </br>
