Added relative path for QSG and compile CHM file to contain Tech Writer and relativ path changes.

--- a/Source/Help/HTML Help Source/Main.htm
+++ b/Source/Help/HTML Help Source/Main.htm
@@ -25,7 +25,7 @@ or you can open it in Word, edit it, and save it as a .htm or .html file.
          The Telemetry Custom Device supports VeriStand benchmarking by helping you log system channels and monitor target resources. You can find a Quick Start Guide for this custom device at the following location:
       </p>
       <p>
-         "C:\Users\Public\Documents\National Instruments\NI VeriStand (Year)\Custom Devices\National Instruments\Telemetry\Windows\Quick Start Documentation\Telemetry Quick Start.md"
+         "%Public%\Documents\National Instruments\NI VeriStand (Year)\Custom Devices\National Instruments\Telemetry\Windows\Quick Start Documentation\Telemetry Quick Start.md"
       </p>
 		<h2>Logged Data</h2>
 		<p>
